Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <img src="images/yoga.png" alt="profile image" />
-        <h2>Yoga Prasetia</h2>
+        <img id="profile-image" src="images/yoga.png" alt="profile image" />
+        <h2 id="profile-name">Yoga Prasetia</h2>
      </div>
 </body>
 </html>
