--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div>
+        <div id="header">Header</div>
         <img id="profile-image" src="images/yoga.png" alt="profile image" />
         <h2 id="profile-name">Yoga Prasetia</h2>
      </div>
